
2011-12-16  Cedric Bail

	* Fix wrong call to free() in edje_load.
	* Reduce parts walk to the strict minimum.

2011-12-19  Cedric Bail

	* Check existence of group at compile time also.

2012-01-02 Carsten Haitzler (The Rasterman)

        * Fix prototype for edje_object_part_text_cursor_content_get()
          as it returned a strduped string and not an internal one, so
          this just formalizes its existing behavior correctly.

2012-01-03  Tom Hacohen (TAsn)

	* Entry: Fixed undo/redo with IMF.

2012-01-04  Carsten Haitzler (The Rasterman)

        * Add HEX, TERMINAL and PASSWORD layouts to edje
        * Add "recalc" smart callback for object size changes

2012-01-05  Cedric Bail

	* Reduce call to stat during edje_object_file_set.

2012-01-06  Cedric Bail

	* Unswallow object that are about to be swallowed if necessary.
	* Add EDJE_ASPECT_PREFER_SOURCE.

2012-01-07  David Seikel (onefang)

	* Lua: Calling non exstent functions no longer crashes scripts.
	   This is so that future scripts will still work with old libraries,
	   and lets us add the "host can provide Lua API" feature soon.

2012-01-09  David Seikel (onefang)

	* Lua: Added edje.version().

2012-01-14  Carsten Haitzler (The Rasterman)

        * Added minmul propery for edje to multiply minimum size during min size calc

2012-01-20  Carsten Haitzler (The Rasterman)

        * Fix the ability to change the edje file source of an edje object
        inside a callback - it worked but you couldn't swallow/set text etc.

2012-01-03  Tom Hacohen (TAsn)

	* Entry: Added edje_object_part_text_style_user_set/get that'll use
	the new corresponding textblock functions.

2012-01-23  Cedric Bail

	* Fix overridding group in edje_cc by fixing with the right index.

2012-01-24  Cedric Bail

	* Filter should only be valid once all program affecting there part are done.

2012-01-25  Cedric Bail

	* Only store the image used by active group.

2012-01-26  Cedric Bail

	* Add min: SOURCE, max: SOURCE.